deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: lighthouse-auth
  name: lighthouse-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lighthouse-auth
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: lighthouse-auth
    spec:
      containers:
      - image: registry.localhost:5000/lighthouseauth
        name: lighthouseauth
        resources: {}
status: {}
