ingress-external.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lighthouse-auth-external-ingress
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /auth
spec:
  rules:
  - host: external.172.21.0.3.xip.io
    http:
      paths:
      - path: /auth
        backend:
          serviceName: lighthouse-auth
          servicePort: 8080
