ingress-internal.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lighthouse-auth-internal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: blue.172.18.0.3.xip.io
    http:
      paths:
      - path: /actuator
        backend:
          serviceName: lighthouse-auth
          servicePort: 8080
